for文の条件内で .size()メソッドの呼び出しを抑制